# consult-the-dead

./: .coverage  .env.example  .gitignore  AGENT_COORDINATION.md  AGORA_PLAN.md  CHANGELOG.md  CONTENT_PIPELINE.md  GOAL_FOUNDER.md  MARKETING_STRATEGY.md  MONETIZATION_PLAYBOOK.md  README.md  Start Company Builder.bat  check-repos.ps1  cold-outreach-wave3-brief.md  commit-msg.txt  deploy-portraits.ps1  first-principles - Shortcut.lnk  fix-deploy.ps1  package.json  pyproject.toml  reddit-sideproject-post.md  requirements.txt  run_next_extractions.ps1  show-hn-draft.md  topics.yaml  twitter-seed-thread.md  vercel.json
.claude/: launch.json
.github/: CODEOWNERS  pull_request_template.md
company-builder/: .env.example  .gitignore  PRODUCT-SPEC.md  README.md  package-lock.json  package.json  vitest.config.ts
docs/: branch-coverage-exceptions.md  coverage-gate-policy.md  ctr-research-notes.md  design-research.md  environment-variables.md  framework-forge-quickstart.md  legal-research-ai-persona-steve-jobs.md  pack-structure-proposal.md  phase0-cold-email-templates.md  phase0-pricing-page-copy.md  phase0-stripe-setup.md  phase0-target-list.md  posthog-funnel-spec.md  pre-deployment-checklist.md  pricing.md  release-and-rollback-playbook.md  retention-email-sequence.md  roster-expansion.md
framework_forge/: __init__.py  chat.py  cli.py  config.py  llm.py  pipeline.py
output/: CTO_HANDOFF_DEVOPS_BLOCKERS_2026-05-12.md  DEVOPS_LOOP_SUMMARY_2026-05-13.md  DEVOPS_POST_WAVE1_CHECKLIST_2026-05-13.md  DEVOPS_STATUS_2026-05-12.md  DEVOPS_STATUS_2026-05-12_FINAL.md  DEVOPS_STATUS_2026-05-13.md  DEVOPS_STATUS_SUMMARY_2026-05-13.md  DEVOPS_WAVE1_MONITORING_PLAN_2026-05-13.md  EDWARD_WAVE1_HANDOFF.md  INDEX_DEVOPS_SESSION_LOOP0.md  MARKETING_WAVE1_FINAL_CHECKLIST_2026-05-13.md  WAVE1_EXECUTION_SUMMARY.md  WAVE1_SEND_EXECUTION_STEPS.md  (+14 more)
(+1148 files in other folders)
